--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/app_logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>E2EE-Real-Time Chat App</title>
+		<title>E2EE Real-Time Chat App</title>
 	</head>
 	<body>
 		<div id="root"></div>
